--- a/package.json
+++ b/package.json
@@ -1,10 +1,38 @@
 {
+  "name": "olympus",
+  "version": "1.0.0",
+  "description": "pc part picker clone",
+  "main": "webpack.config.js",
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8"
   },
   "dependencies": {
     "laravel-elixir": "^4.0.0",
-    "bootstrap": "^4.0.0-alpha.6"
-  }
+    "bootstrap": "^4.0.0-alpha.6",
+    "axios": "^0.15.2",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "flux": "^3.1.0",
+    "history": "^4.4.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.16.2"
+},
+"scripts": {
+  "dev": "webpack-dev-server",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+"author": "Connor Sumners, William Staud, Travis Wilborn"
 }
